NGO-1767 - Initial refactoring and creation of new page

--- a/SigningPortalDemo/Pages/_Layout.cshtml
+++ b/SigningPortalDemo/Pages/_Layout.cshtml
@@ -31,6 +31,9 @@
                     <li><a asp-page="/NewCustomer">New&nbsp;Customer</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
+                    <li><a asp-page="/SignDemo">Rent-a-Wood</a></li>
+                </ul>
+                <ul class="nav navbar-nav">
                     <li><a asp-page="/History">History</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
