--- a/SigningPortalDemo/Pages/_Layout.cshtml
+++ b/SigningPortalDemo/Pages/_Layout.cshtml
@@ -31,7 +31,7 @@
                     <li><a asp-page="/NewCustomer">New&nbsp;Customer</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
-                    <li><a asp-page="/SignDemo">Rent-a-Wood</a></li>
+                    <li><a asp-page="/RentItem">Rent-a-Wood</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
                     <li><a asp-page="/History">History</a></li>
